<resources>
    <string name="app_name">Tirfe</string>
    <string name="comp" translatable="false">Agaz Studio ፳፻፲፭</string>
    <string name="five">Enter 5\'s </string>
    <string name="ten">Enter 10\'s </string>
    <string name="fifteen">Enter 15\'s </string>
    <string name="twenty">Enter 20\'s</string>
    <string name="twenty_five">Enter 25\'s </string>
    <string name="fifty">Enter 50\'s </string>
    <string name="hundred">Enter 100\'s </string>
    <string name="two_hundred">Enter 200\'s </string>
    <string name="two_hundred_fifty">Enter 250\'s</string>
    <string name="five_hundred">Enter 500\'s</string>
    <string name="one_thousand">Enter 1000\'s</string>
    <string name="reset">Reset</string>
    <string name="calc">Calculate</string>
    <string name="operator1">ethio tel</string>
    <string name="operator2">Safaricom</string>
    <string name="okay_txt">Okay</string>
    <string name="cancel_txt">Cancel</string>
    <string name="again">again</string>
    <string name="pay">Pay:</string>
    <string name="Birr">Birr</string>
    <string name="profit">Your profit is:</string>
    <string name="margine">Operators Price</string>
    <string name="lang">Change language</string>
    <string name="margineIntroTv">Select Operator to view and update values</string>
    <string name="naVal">N/A</string>
    <string name="defaultButton">Load Default</string>
    <string name="cardNum5">5\'s price</string>
    <string name="cardNum10">10\'s price</string>
    <string name="cardNum15">15\'s price</string>
    <string name="cardNum20">20\'s price</string>
    <string name="cardNum25">25\'s price</string>
    <string name="cardNum50">50\'s price</string>
    <string name="cardNum100">100\'s price</string>
    <string name="cardNum200">200\'s price</string>
    <string name="cardNum250">250\'s price</string>
    <string name="cardNum500">500\'s price</string>
    <string name="cardNum1000">1000\'s price</string>

    <string name="fiveTele">4.65</string>
    <string name="tenTele">9.30</string>
    <string name="fifteenTele">13.95</string>
    <string name="twentyfiveTele">23.25</string>
    <string name="fiftyTele">46.50</string>
    <string name="hundredTele">93</string>

    <string name="fiveSafari">4.65</string>
    <string name="tenSafari">9.30</string>
    <string name="fifteenSafari">13.95</string>
    <string name="twentyfiveSafari">23.25</string>
    <string name="fiftySafari">46.50</string>
    <string name="hundredSafari">93</string>
    <string name="twohundredSafari">186</string>
    <string name="set">Set Margins</string>
    <string name="setoperator">chosen</string>
    <string name="defaultset">Default is set</string>
    <string name="values">Values are refreshed</string>
    <string name="fillall">Some values unchanged!</string>
    <string name="setamount">Pick Amount</string>
    <string name="alert200">Ethio tele\'s 200 value is 0, reset it on Operators Price</string>
    <string name="alert20">Ethio tele\'s 20 value is 0, reset it on Operators Price</string>
    <string name="alert5">Safaricom\'s 5 value is 0, reset it on Operators Price</string>
    <string name="alert250">Ethio tele\'s 250 value is 0, reset it on Operators Price</string>
    <string name="alert500">Ethio tele\'s 500 value is 0, reset it on Operators Price</string>
    <string name="alert1000">Ethio tele\'s 1000 value is 0, reset it on Operators Price</string>





</resources>